# objdetex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: main.cpp
src/objdetex/: config.h.in  objdetex.cpp  objdetex.h
src/yolov7_cxx/: yolov7_cxx.cpp  yolov7_cxx.h
